--- a/2/index.html
+++ b/2/index.html
@@ -11,9 +11,44 @@ de un segundo, al volver hacer click debe volver a estar en blanco y negro.
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ejercicio 2</title>
+    <style>
+        img {
+            -webkit-filter: grayscale(100%);
+            -moz-filter:    grayscale(100%);
+            -ms-filter:     grayscale(100%);
+            -o-filter:      grayscale(100%);
+            transition: 1s;
+        }
+
+        .saturar{
+            filter: 100%;
+            -webkit-filter: grayscale(0%);
+            -moz-filter:    grayscale(0%);
+            -ms-filter:     grayscale(0%);
+            -o-filter:      grayscale(0%);
+            transition: 1s;
+
+
+        }
+
+    </style>
   </head>
   <body>
+      <img src="https://picsum.photos/900/300?image=0" alt="">
+      <img src="https://picsum.photos/200/300?image=1" alt="">
+      <img src="https://picsum.photos/200/300?image=2" alt="">
+      <img src="https://picsum.photos/200/300?image=3" alt="">
+      <img src="https://picsum.photos/200/300?image=4" alt="">
+      <img src="https://picsum.photos/200/300?image=5" alt="">
+
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script>
+            $("img").on("click", function(){
+                $(this).toggleClass("saturar");
+            });
+
+        </script>
 
   </body>
 </html>
