--- a/1/index.html
+++ b/1/index.html
@@ -6,12 +6,49 @@ Tip: Investigar el evento window.onload
 -->
 
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Ejercicio 1</title>
   </head>
   <body>
+      <img src="https://picsum.photos/900/300?image=0" alt="">
+      <img src="https://picsum.photos/200/300?image=1" alt="">
+      <img src="https://picsum.photos/200/300?image=2" alt="">
+      <img src="https://picsum.photos/200/300?image=3" alt="">
+      <img src="https://picsum.photos/200/300?image=4" alt="">
+      <img src="https://picsum.photos/200/300?image=5" alt="">
+      <img src="https://picsum.photos/900/300?image=6" alt="">
+      <img src="https://picsum.photos/200/300?image=7" alt="">
+      <img src="https://picsum.photos/200/300?image=8" alt="">
+      <img src="https://picsum.photos/200/300?image=9" alt="">
+      <img src="https://picsum.photos/900/300?image=10" alt="">
+      <img src="https://picsum.photos/200/300?image=11" alt="">
+      <img src="https://picsum.photos/900/300?image=15" alt="">
+      <img src="https://picsum.photos/200/300?image=13" alt="">
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script>
+            $(function(){
+                alert("antes de la carga")
 
+            });
+
+            $(window).on("load", function(){
+                alert("despues de la carga de img")
+            });
+
+
+        /*   function load() {
+        alert("evento load detectado!");
+    }
+
+        $("img").on("click", load)
+
+         function load() {
+        alert("evento load detectado!");
+      }
+      window.onload = load;*/
+
+        </script>
   </body>
 </html>
